タグ名が異なる場合であってもAuthenticationを期待してしまう
