# backend/api/controllers/restapi/api_sample.go
@@ -1,0 +1,31 @@
+/*
+ * プロダクト名：Sample
+ *
+ * APIの説明
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"api/handlers"
+
+	"github.com/gin-gonic/gin"
+)
+
+type SampleAPI struct {
+	handlers handlers.Handlers
+}
+
+func NewSampleAPI(handlers handlers.Handlers) SampleAPI {
+	return SampleAPI{handlers: handlers}
+}
+
+// Post /sample
+// サンプルPOSTリクエスト 
+func (api *SampleAPI) PostSample(c *gin.Context) {
+	api.handlers.PostSample(c)
+}
+
