# backend/api/controllers/restapi/model_post_sample_request.go
@@ -1,0 +1,17 @@
+/*
+ * プロダクト名：Sample
+ *
+ * APIの説明
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type PostSampleRequest struct {
+
+	Udi string `json:"udi,omitempty"`
+
+	Password string `json:"password,omitempty"`
+}
