# backend/api/handlers/sample.go
@@ -1,0 +1,9 @@
+package handlers
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+type SampleHandlers interface {
+	PostSample(c *gin.Context)
+}
